# Hasking

./: .binTree.hs.swp  .daphone.hs.swp  .gitignore  .test.hs.swp  arbitrary.hs  binTree.hs  cesar.hs  daphone.hs  databaseProcessing.hs  fmap.hs  functorInstances.hs  garden.hs  haskget.hs  huttonsRazor.hs  iterate.hs  knight.hs  mywords.hs  onlyNatural.hs  person.hs  programmers.hs  recursion.hs  ruleTheTypes.hs  stack.hs  stringProcessing.hs  test.hs  tooMany.hs  typeKwonDo.hs  vignere.hs  wordnumber.hs
experiments/: experiments.cabal  monads.hs
experiments/.stack-work/install/x86_64-linux/lts-7.11/8.0.1/flag-cache/: Cabal-1.24.1.0-IrwQRxLtBmMIrR1JspkXtd  HTTP-4000.3.3-JMFhmeoXqbBIjfEWxmijf9  HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  RSA-2.2.0-EHQUhJZHM7hLOJkF4fZ4IR  SHA-1.6.4.2-GSP9nhHyWNEAImBrL9QfXp  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  authenticate-oauth-1.5.1.2-6sZj7xkCkjF6zSXuEvJIr2  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  cabal-install-1.24.0.1  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  checkers-0.4.6-3FKOYAS90lTBM95J5H2HRi  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  connection-0.2.6-2HNmlyTwJgHAuxKuraNKr  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  crypto-api-0.13.2-LliNhOf849x8qng9ESkbgP  crypto-pubkey-types-0.4.3-JpSD95Q37wENJRNhamSc3  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  (+71 more)
experiments/src/: .Optional.hs.swp  .maybeAnother.hs.swp  .semigroups.hs.swp  Addition.hs  AltParsing.hs  BT.hs  Compose.hs  EitherMonad.hs  EitherT.hs  FizzBuzz.hs  Fractions.hs  FunctorCheck.hs  HttpStuff.hs  Ini.hs  LearnParsers.hs  List.hs  Main.hs  Marshalling.hs  Moi.hs  MonadInstances.hs  MonoidLaws.hs  Optional.hs  OuterInner.hs  PrimeNums.hs  RandomExample.hs  ReaderPractice.hs  StateT.hs  Validation.hs  ZipList.hs  applicativeInstances.hs  badMonoid.hs  cesar.hs  ch26ex.hs  ciphers.hs  dList.hs  dontgivemefive.hs  fixCh26.hs  fixerUpper.hs  fizzbuzz.hs  foldableFunctions.hs  (+16 more)
hangman/: hangman.cabal  stack.yaml
hangman/.stack-work/install/x86_64-linux/lts-5.8/7.10.3/flag-cache/: QuickCheck-2.8.1-8a87b464a167a1dd789e3a0c72a16364  hangman-0.1.0.0  hangman-0.1.0.0-5e4774d5de89cff5d3f53c9afed95a41  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  random-1.1-c46cc413d88c0a330b5495d03f0ed464  split-0.2.3-8ed100aa18239d92816021c44aa12b38  tf-random-0.5-be1be3a7eeba5ee8baa6cee25a76f884
hangman/.stack-work/install/x86_64-linux/lts-5.8/7.10.3/lib/x86_64-linux-ghc-7.10.3/hangman-0.1.0.0-Cl7LAeSwo0rI4Wz5e7V4SK/: Hangman.dyn_hi  Hangman.hi
hangman/.stack-work/install/x86_64-linux/lts-5.8/7.10.3/pkgdb/: hangman-0.1.0.0-5e4774d5de89cff5d3f53c9afed95a41.conf  package.cache
hangman/src/: .Main.hs.swp  Hangman.hs  Main.hs
hangman/tests/: tests.hs
morse/: morse.cabal
morse/.stack-work/install/x86_64-linux/lts-7.11/8.0.1/lib/x86_64-linux-ghc-8.0.1/morse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi/: Morse.dyn_hi
morse/.stack-work/install/x86_64-linux/lts-7.11/8.0.1/pkgdb/: morse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi.conf  package.cache
morse/app/: Main.hs
morse/src/: Morse.hs
morse/test/: test.hs
myShawty/src/: Main.hs  Mainnn.hs
shawty/: LICENSE  shawty.cabal
(+91 files in other folders)
