name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/Dansvidania/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Danilo Amoroso 
maintainer:          dan.j.amoroso@gmail.com
copyright:           2016 Danilo Amoroso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
