name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/Dansvidania/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Danilo Amoroso 
maintainer:          dan.j.amoroso@gmail.com
copyright:           2016 Danilo Amoroso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Hangman
  build-depends:        base >= 4.7 && < 5
                      , QuickCheck
                      , random
                      
  ghc-options:          -Wall -fwarn-tabs
  default-language:     Haskell2010

executable hangman
  hs-source-dirs:       src
  main-is:              Hangman.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , random
                      , split
                      , QuickCheck
  ghc-options:          -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              tests.hs
  build-depends:        base
                      , hangman
                      , QuickCheck
  ghc-options:          -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  
